# ai-dev-template

./: CLAUDE.md  README.md
cli/: pyproject.toml
cli/src/ait/: __init__.py  main.py
cli/src/ait/commands/: add.py  install.py  list_cmd.py  profiles.py  remove.py  show.py  status.py  sync.py  update.py  use.py
cli/src/ait/core/: config.py
docs/superpowers/specs/: 2026-03-23-ait-cli-design.md
mcp/: context7.json
profiles/: vue-admin.yaml
rules/claude/: git-security.md  python-code-style.md  server-security.md  vue-use-eui.md
rules/cursor/: tv-webview-vue.mdc
skills/: ui-ux-pro-max.md
templates/: nuxt-admin.md  tv-webview-vue.md
