[project]
name = "ait"
version = "0.1.0"
description = "AI dev config management CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
ait = "ait.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ait"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[dependency-groups]
dev = ["pytest>=8.0"]
